# FindAFactor

./: CMakeLists.txt  LICENSE  MANIFEST.in  README.md  factor_bench.py  factor_bench.py.save  find_a_factor  find_a_factor.py  optimization_test.py  pyproject.toml  setup.py  trial_division.py  tuner.py  wheel_gen.py  wheel_test.py  wheel_tuner.py
.github/workflows/: build.yml
FindAFactor/: __init__.py  _find_a_factor.cpp  dispatchqueue.cpp  find_a_factor.py  main.cpp  oclengine.cpp
FindAFactor/include/: dispatchqueue.hpp  oclengine.hpp  wheel_factorization.hpp
FindAFactor/include/common/: config.h.in
src/: find_a_factor.cpp
