[build-system]
requires = [
    "cmake",
    "pybind11",
    "setuptools>=42",
]
build-backend = "setuptools.build_meta"

[project]
name = "FindAFactor"
version = "3.8.0"
requires-python = ">=3.8"
description = "Find any nontrivial factor of a number"
readme = {file = "README.txt", content-type = "text/markdown"}
license = {text = "MIT"}
authors = [
  {name = "Dan Strano", email = "stranoj@gmail.com"}
]
maintainers = [
  {name = "Dan Strano", email = "stranoj@gmail.com"}
]