[build-system]
requires = [
    "cmake",
    "pybind11",
    "setuptools"
]
build-backend = "setuptools.build_meta"

[project]
name = "FindAFactor"
version = "6.3.1"
requires-python = ">=3.8"
description = "Find any nontrivial factor of a number"
readme = {file = "README.txt", content-type = "text/markdown"}
license = {text = "MIT License"}
authors = [
  {name = "Dan Strano", email = "stranoj@gmail.com"}
]
maintainers = [
  {name = "Dan Strano", email = "stranoj@gmail.com"}
]
classifiers=[
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/vm6502q/FindAFactor"
Documentation = "https://github.com/vm6502q/FindAFactor/blob/main/README.md"
Repository = "https://github.com/vm6502q/FindAFactor"
Issues = "https://github.com/vm6502q/FindAFactor/issues"